RESOLVED FIXED301118
Fix untyped malloc() calls in JavaScriptCore and WebCore
https://bugs.webkit.org/show_bug.cgi?id=301118
Summary Fix untyped malloc() calls in JavaScriptCore and WebCore
David Kilzer (:ddkilzer)
Reported 2025-10-20 13:12:06 PDT
Fix untyped malloc() calls in JavaScriptCore and WebCore.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-20 13:12:17 PDT
David Kilzer (:ddkilzer)
Comment 2 2025-10-20 14:26:36 PDT
EWS
Comment 3 2025-10-24 20:36:11 PDT
Committed 302125@main (eaa04bef99bc): <https://commits.webkit.org/302125@main> Reviewed commits have been landed. Closing PR #52678 and removing active labels.
David Kilzer (:ddkilzer)
Comment 4 2025-10-25 08:48:06 PDT
EWS
Comment 5 2025-10-25 10:41:21 PDT
Committed 302141@main (5b9bca301356): <https://commits.webkit.org/302141@main> Reviewed commits have been landed. Closing PR #52988 and removing active labels.
WebKit Commit Bot
Comment 6 2025-10-27 18:29:44 PDT
Re-opened since this is blocked by bug 301549
David Kilzer (:ddkilzer)
Comment 7 2025-10-28 11:33:23 PDT
EWS
Comment 8 2025-10-29 09:18:28 PDT
Committed 302295@main (46b1aab009a2): <https://commits.webkit.org/302295@main> Reviewed commits have been landed. Closing PR #53093 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.