Fix untyped malloc() calls in JavaScriptCore and WebCore <https://bugs.webkit.org/show_bug.cgi?id=301118> <rdar://163059754>

Reviewed by Geoff Garen.

When compiling with type-aware malloc enabled, the compiler has many
hints from which type information may be deduced:
- C-style casts
- reinterpret_cast<>()
- static_cast<>()
- Multiplying a variable by sizeof(TYPE_NAME)

The fix is to find a way to introduce these mechanisms, or to use
WTF_TYPE_AWARE_MALLOC_FUNCTION() when C++ template types aren't
available.

* Source/JavaScriptCore/jit/ExecutableAllocator.cpp:
(JSC::dumpJITMemory):
- Fix untyped malloc() by switching to LazyNeverDestroyed<std::array>.
- Also fix remaining unsafe buffer issues by adopting std::span.

* Source/WTF/wtf/MallocSpan.h:
- Provide specialization for MallocSpan<T, SystemMalloc> that inherits
  from MallocSpan<T, SystemMallocBase<T>> so that <typename T> is
  available when using SystemMallocBase in order to provide type hints
  to malloc() functions via static_cast<T*>().  We use this
  specialization so that other classes used with WTF::MallocSpan are not
  required to adopt a <typename T> template parameter.
* Source/WTF/wtf/PlatformHave.h:
- Change definition of HAVE_TYPE_AWARE_MALLOC and
  WTF_TYPE_AWARE_MALLOC_FUNCTION() to use OS versions.  An enablement
  check is added to SystemMalloc.h where <malloc/malloc.h> may be
  included without affecting preprocesesing of sandbox profiles
  (*.sb.in).
* Source/WTF/wtf/SystemMalloc.h:
- Add enablement checks that _MALLOC_TYPE_ENABLED and
  HAVE_TYPE_AWARE_MALLOC are both enabled at the same time.
- Rename WTF::SystemMalloc to WTF::SystemMallocBase for SystemMalloc
  template specialization in MallocSpan.h (see above).
(WTF::SystemMallocBase::malloc):
(WTF::SystemMallocBase::tryMalloc):
(WTF::SystemMallocBase::zeroedMalloc):
(WTF::SystemMallocBase::tryZeroedMalloc):
(WTF::SystemMallocBase::realloc):
(WTF::SystemMallocBase::tryRealloc):
- Add static_cast<T*>() to provide type hint to malloc() and friends,
  then change the return type from void* to T*.

(WTF::SystemMalloc::malloc): Rename.
(WTF::SystemMalloc::tryMalloc): Rename.
(WTF::SystemMalloc::zeroedMalloc): Rename.
(WTF::SystemMalloc::tryZeroedMalloc): Rename.
(WTF::SystemMalloc::realloc): Rename.
(WTF::SystemMalloc::tryRealloc): Rename.
(WTF::SystemMalloc::free): Rename.
(WTF::SystemMalloc::nextCapacity): Rename.
* Source/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp:
(WebCore::xmlMallocHelper):
(WebCore::xmlFreeHelper):
(WebCore::XMLMalloc::malloc):
- When HAVE(TYPE_AWARE_MALLOC) is enabled, just make XMLMalloc an alias
  of WTF::SystemMalloc since that's effectively what we were doing
  before.  This cleans up typed malloc support for this code.
(WebCore::XMLMalloc::WTF_TYPE_AWARE_MALLOC_FUNCTION): Deleted.

Canonical link: https://commits.webkit.org/302125@main